--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="ltr" class="no-js">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Psychic Game!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>
+        The Psychic Game
+    </title>
 </head>
 
 <body>
-
     <h1>The Psychic Game</h1>
-    
-    <h3>Guess what letter I'm thinking of...</h3>
-
-    <p>Wins:</p>
-
-    <p>Losses:</p>
-
-    <p>Guesses left:</p>
-
-    <p>Your guesses so far:</p>
-
+    <p>Guess what letter I'm thinking of...</p>
+    <p>
+        Wins: <span id="wins">0</span>
+    </p>
+    <p>
+        Losses: <span id="losses">0</span>
+    </p>
+    <p>
+        Guesses left: <span id="guesses-left">9</span>
+    </p>
+    <p>
+        Your guesses so far:<br>
+        <span id="guesses"></span>
+    </p>
     <script src="assets/javascript/game.js"></script>
 </body>
 
