--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Manjari&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>
         The Psychic Game
     </title>
@@ -25,7 +27,7 @@
         Your guesses so far:<br>
         <span id="guesses"></span>
     </p>
-    <script src="assets/javascript/game.js"></script>
+    <script src="javascript/game.js"></script>
 </body>
 
 </html>
